fixed spacing

--- a/src/Components/css/aboutUs.css
+++ b/src/Components/css/aboutUs.css
@@ -35,7 +35,7 @@
 
 .aboutUsRight{
     /* border: 1px solid; */
-    margin: 100px 70px 50px 0px;
+    margin: 100px 70px 100px 0px;
     width: 550px;
     padding-top: 30px;
     display: flex;
